# mcp-matomo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  matomo-api.json
.github/workflows/: ci.yml  release.yml
openapi-gen/: Cargo.toml
openapi-gen/src/: client.rs  main.rs  openapi.rs  parser.rs  schema_inference.rs  types.rs
server/: Cargo.toml
server/src/: generator.rs  http_client.rs  main.rs  matomo_client.rs  openapi.rs  parser.rs  schema_inference.rs  service.rs  types.rs
server/tests/: e2e.rs
