[package]
name = "matomo-openapi-generator"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Generate OpenAPI schema from Matomo API by introspecting available methods"
authors = ["François-Guillaume Ribreau <rust@fgribreau.com>"]
license = "MIT"
repository = "https://github.com/FGRibreau/mcp-matomo"
homepage = "https://github.com/FGRibreau/mcp-matomo"
documentation = "https://github.com/FGRibreau/mcp-matomo#readme"
readme = "../README.md"
keywords = ["matomo", "openapi", "analytics", "piwik", "api"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
url = "2.5"
scraper = "0.22"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
