[package]
name = "mcp-matomo"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "MCP server for Matomo Analytics API - Query your analytics data with Claude"
authors = ["François-Guillaume Ribreau <rust@fgribreau.com>"]
license = "MIT"
repository = "https://github.com/FGRibreau/mcp-matomo"
homepage = "https://github.com/FGRibreau/mcp-matomo"
documentation = "https://github.com/FGRibreau/mcp-matomo#readme"
readme = "../README.md"
keywords = ["mcp", "matomo", "analytics", "claude", "llm"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[[bin]]
name = "mcp-matomo"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.12", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Matomo API calls
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Logging (to stderr, not stdout!)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# Schema generation
schemars = "0.8"

# Indexmap for ordered JSON
indexmap = { version = "2.0", features = ["serde"] }
